{
  "version": 4,
  "terraform_version": "1.0.3",
  "serial": 32,
  "lineage": "48f2f675-996e-da8c-c85f-07295a6d26be",
  "resources": [
    {
      "module": "module.db.module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014237146008:security-group/sg-091fd0ac774a0eb76",
            "description": "Grupo de seguranca para a base de dados",
            "egress": [],
            "id": "sg-091fd0ac774a0eb76",
            "ingress": [],
            "name": "database-sg-20210821185431794000000003",
            "name_prefix": "database-sg-",
            "owner_id": "014237146008",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database-sg"
            },
            "tags_all": {
              "Name": "database-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e34228b8dc3ef58b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.db.module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": 3306,
            "id": "sgrule-2480970016",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-091fd0ac774a0eb76",
            "self": false,
            "source_security_group_id": "sg-0f108bb1755c61cc2",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.db.module.security_group.aws_security_group.this",
            "module.db.module.security_group.aws_security_group.this_name_prefix",
            "module.keycloak.module.security_group.aws_security_group.this",
            "module.keycloak.module.security_group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.keycloak.module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014237146008:security-group/sg-0f108bb1755c61cc2",
            "description": "Grupo de seguranca para o Keycloak",
            "egress": [],
            "id": "sg-0f108bb1755c61cc2",
            "ingress": [],
            "name": "keycloak-sg-20210821185431793800000002",
            "name_prefix": "keycloak-sg-",
            "owner_id": "014237146008",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "keycloak-sg"
            },
            "tags_all": {
              "Name": "keycloak-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e34228b8dc3ef58b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014237146008:internet-gateway/igw-07b5842163f1ca02a",
            "id": "igw-07b5842163f1ca02a",
            "owner_id": "014237146008",
            "tags": {
              "Name": "keycloak-vpc"
            },
            "tags_all": {
              "Name": "keycloak-vpc"
            },
            "vpc_id": "vpc-0e34228b8dc3ef58b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07b5842163f1ca02a",
            "id": "r-rtb-03e46a2f68c53c8021080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03e46a2f68c53c802",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014237146008:route-table/rtb-07c28d24403bc1b15",
            "id": "rtb-07c28d24403bc1b15",
            "owner_id": "014237146008",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "keycloak-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "keycloak-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-0e34228b8dc3ef58b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014237146008:route-table/rtb-02f48839c60e5f048",
            "id": "rtb-02f48839c60e5f048",
            "owner_id": "014237146008",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "keycloak-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "keycloak-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-0e34228b8dc3ef58b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014237146008:route-table/rtb-03e46a2f68c53c802",
            "id": "rtb-03e46a2f68c53c802",
            "owner_id": "014237146008",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07b5842163f1ca02a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "keycloak-vpc-public"
            },
            "tags_all": {
              "Name": "keycloak-vpc-public"
            },
            "vpc_id": "vpc-0e34228b8dc3ef58b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fffc2ebe60edca5c",
            "route_table_id": "rtb-07c28d24403bc1b15",
            "subnet_id": "subnet-02622b15e384699f3"
          },
          "dependencies": [
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052811cfe261b30ff",
            "route_table_id": "rtb-02f48839c60e5f048",
            "subnet_id": "subnet-0fdffc3801d879e75"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f10100da9b6f06da",
            "route_table_id": "rtb-07c28d24403bc1b15",
            "subnet_id": "subnet-0e9237c1733b4fee3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a5eb19ce521fea3",
            "route_table_id": "rtb-02f48839c60e5f048",
            "subnet_id": "subnet-08170e7c1dacca59f"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071433035620b0bfb",
            "route_table_id": "rtb-03e46a2f68c53c802",
            "subnet_id": "subnet-04ad4d5f699c82451"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_route_table.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a18cba57837428f9",
            "route_table_id": "rtb-03e46a2f68c53c802",
            "subnet_id": "subnet-0f08b3126a035b743"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014237146008:subnet/subnet-02622b15e384699f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-02622b15e384699f3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "014237146008",
            "tags": {
              "Name": "keycloak-vpc-db-us-east-1a"
            },
            "tags_all": {
              "Name": "keycloak-vpc-db-us-east-1a"
            },
            "vpc_id": "vpc-0e34228b8dc3ef58b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014237146008:subnet/subnet-0fdffc3801d879e75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0fdffc3801d879e75",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "014237146008",
            "tags": {
              "Name": "keycloak-vpc-db-us-east-1a"
            },
            "tags_all": {
              "Name": "keycloak-vpc-db-us-east-1a"
            },
            "vpc_id": "vpc-0e34228b8dc3ef58b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014237146008:subnet/subnet-0e9237c1733b4fee3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0e9237c1733b4fee3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "014237146008",
            "tags": {
              "Name": "keycloak-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "keycloak-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-0e34228b8dc3ef58b"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014237146008:subnet/subnet-08170e7c1dacca59f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-08170e7c1dacca59f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "014237146008",
            "tags": {
              "Name": "keycloak-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "keycloak-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-0e34228b8dc3ef58b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014237146008:subnet/subnet-04ad4d5f699c82451",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-04ad4d5f699c82451",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "014237146008",
            "tags": {
              "Name": "keycloak-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "keycloak-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-0e34228b8dc3ef58b"
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014237146008:subnet/subnet-0f08b3126a035b743",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0f08b3126a035b743",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "014237146008",
            "tags": {
              "Name": "keycloak-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "keycloak-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-0e34228b8dc3ef58b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:014237146008:vpc/vpc-0e34228b8dc3ef58b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-036a0f7c4e6d411c9",
            "default_route_table_id": "rtb-0fa42d1b670f51c29",
            "default_security_group_id": "sg-0ae5e28a24c075512",
            "dhcp_options_id": "dopt-20d0dd5a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e34228b8dc3ef58b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fa42d1b670f51c29",
            "owner_id": "014237146008",
            "tags": {
              "Name": "keycloak-vpc"
            },
            "tags_all": {
              "Name": "keycloak-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}